# billing-app

./: .env  .env.example  .gitignore  .keys  .keys.pub  .npmrc  CHANGELOG.md  README.md  app.key  app.key.pub  electron-builder.yml  license.txt  main.js  middleware.ts  middleware.ts.bak  myapp.key  myapp.key.pub  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  preload.js  server.js  start-dev.js  tauri_private.key  tauri_private__enc_b64.txt  tauri_private_b64.txt  tauri_private_enc.key  tsconfig.json  tsconfig.node.json  tsconfig.script.json  tsconfig.tsbuildinfo  updater.json
backend/: .dockerignore  .env  .env.docker.example  Dockerfile  Siriadmin-backend-86x_64-pc-windows-msvc.spec  Siriadmin-backend-x86_64-pc-windows-msvc.spec  Sriradmin-backend-x86_64-pc-windows-msvc.spec  Sriradmin-backend.spec  app.py  app.spec  billing-backend-x86_64-apple-darwin.spec  billing-backend.spec  config.py  database.txt  docker-compose.yml  label.tspl  pyinstaller.txt  pyproject.toml  requirements.docker.txt  requirements.txt  siribackend-x86_64-pc-windows-msvc.spec  supabase_db.py  supabase_schema.txt  test.py
backend/app/data/logs/: sync_state.json
backend/backend.egg-info/: PKG-INFO  requires.txt
backend/data/json/: batches.json  billitems.json  bills.json  customers.json  expected_db_schema.json  local_sync_table.json  notifications.json  products.json  returns.json  settings.json  storeinventory.json  stores.json  sync_logs.json  sync_table.json  synctable.json  users.json  userstores.json
backend/data/logs/: sync_manager.log.2025-09-20  sync_manager.log.2025-09-21  sync_manager.log.2025-09-23
backend/migrations/: 20260222_transfer_and_damaged_inventory.sql  20260224_supabase_conflict_guard.sql  20260226_store_damage_returns.sql  20260331_billing_realtime_read_policies.sql  20260430_gst_registrations.sql  20260616_store_audits.sql  20260617_migrate_old_damage_to_returns.sql  20260617_return_products.sql  20260617_return_products_sent_to.sql  MIGRATION_GUIDE.md
backend/routes/: __init__.py  admin.py  analytics.py  audits.py  auth.py  batches.py  bills.py  customers.py  discounts.py  gst_registrations.py  hsn_codes.py  notifications.py  orders.py  printing.py  products.py  return_orders.py  returns.py  settings.py  stores.py  sync.py  twofa.py  users.py
backend/scripts/: check_bills_data.py  cleanup_sync_table.py  create_missing_tables.py  diag_barcodes.py  export_data.py  migrate_mysql_to_supabase.py  rebuild_products_json.py  schema_checker.py  sync.py  sync_check.py  sync_fixed.py  sync_manager.py  upload_data.py
backend/services/: __init__.py  analytics_service.py  audits_service.py  batches_service.py  bills_service.py  customers_service.py  discounts_service.py  gst_registrations_service.py  hsn_codes_service.py  notifications_service.py  orders_service.py  products_service.py  return_orders_service.py  returns_service.py  settings_service.py  stores_service.py  sync_service.py  twofa_service.py  users_service.py
backend/utils/: cache_manager.py  concurrency_guard.py  connectivity.py  db.py  helpers.py  json_helpers.py  json_utils.py  offline_queue.py  print_TSPL.py  supabase_circuit.py  supabase_db.py  supabase_resilience.py  sync_utils.py
src-tauri/: Cargo.toml  src-lib.rs  tauri.conf.json
src-tauri/_MEI139762/scripts/: sync.py
src-tauri/_MEI139762/utils/: print_TSPL.py  sync_utils.py
src-tauri/_MEI139762/wheel-0.45.1.dist-info/: RECORD
src-tauri/_MEI169122/flask-3.1.1.dist-info/: RECORD
src-tauri/_MEI169122/opentelemetry_instrumentation-0.52b1.dist-info/: RECORD
src-tauri/_MEI169122/scripts/: export_data.py
src-tauri/_MEI169122/utils/: db.py
src-tauri/_MEI199322/scripts/: sync_manager.py
src-tauri/_MEI199322/utils/: db.py  print_TSPL.py  sync_utils.py
src-tauri/_MEI209642/scripts/: schema_checker.py
src-tauri/_MEI209642/utils/: json_utils.py
src-tauri/app/data/json/: store.json  user.json
src-tauri/app/data/logs/: sync_state.json
src-tauri/binaries/app/data/json/: product.json  user.json
src-tauri/binaries/data/json/: settings.json  sync_logs.json
src-tauri/capabilities/: default.json  main-capability.json
src-tauri/data/json/: products.json  sync_logs.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+1517 files in other folders)
