[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "html2image>=2.0.7",
    "mysql-connector>=2.2.9",
    "pillow>=11.3.0",
    "pyinstaller>=6.16.0",
    "python-dotenv>=1.1.1",
    "pywin32>=311",
    "requests>=2.32.5",
]
