[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altgraph==0.17.4",
    "blinker==1.9.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "flask==3.1.2",
    "flask-cors==6.0.1",
    "html2image>=2.0.7",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "macholib==1.16.3",
    "markupsafe==3.0.2",
    "mysql-connector>=2.2.9",
    "mysql-connector-python==8.4.0",
    "packaging==25.0",
    "pillow>=11.3.0",
    "pyinstaller==6.16.0",
    "pyinstaller-hooks-contrib==2025.8",
    "python-dotenv==1.1.1",
    "pywin32>=311",
    "requests==2.32.5",
    "schedule==1.2.0",
    "setuptools==80.9.0",
    "urllib3==2.5.0",
    "werkzeug==3.1.3",
]
