[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.4.1", features = ["tray-icon", "unstable"] }
tauri-plugin-dialog = "2.4.0"
tauri-plugin-updater = "2"
tauri-plugin-log = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
log = "0.4"
env_logger = "0.10"
urlencoding = "2.1.3"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.10.1"
url = "2.5.7"
which = "4"

[[bin]]
name = "app"
path = "src/main.rs"
windows_subsystem = "windows"
