[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2.3.1"
tauri-plugin-updater = {version = "2.0.0", features = ["rustls-tls"] }
tauri-plugin-dialog = "2.0.0"
uuid = { version = "1.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
tokio = { version = "1.x", features = ["full"] }
regex = "1.11.2"
serialport = "4.7.3"
