[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.0", features = [] }
tauri-plugin-shell = "2.3.1"
tauri-plugin-updater = { version = "2.0.0", features = ["rustls-tls"] }
tauri-plugin-dialog = "2.0.0"
uuid = { version = "1.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
tokio = { version = "1.x", features = ["full"] }
regex = "1.11.2"
serialport = "4.7.3"
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tauri-plugin-log = "2.7.0"
once_cell = "1.19"



[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_Graphics_Printing",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell"
] }
